# JumaRE

./: .gitmodules  CMakeLists.txt  LICENSE
JumaSC/: CMakeLists.txt
JumaSC/include/JumaSC/: JumaSC.h
JumaSC/src/: CompilerInternal.cpp  CompilerInternal.h  JumaSC.cpp  JumaSC_dxc.cpp  JumaSC_dxc.h  JumaSC_glslang.cpp  JumaSC_glslang.h  JumaSC_spirv_cross.cpp
JumaShaderCompiler/: CMakeLists.txt
JumaShaderCompiler/include/JumaShaderCompiler/: Compiler.h
JumaShaderCompiler/src/: CompilerInternal.cpp  CompilerInternal.h  JumaSC_dxc.cpp  JumaSC_dxc.h  JumaSC_glslang.cpp  JumaSC_glslang.h  JumaSC_spirv_cross.cpp
include/JumaRE/: RenderAPI.h  RenderEngine.h  RenderEngineAsset.h  RenderEngineContextObject.h  RenderEngineImpl.h  RenderEngineImpl_DirectX11.h  RenderEngineImpl_DirectX12.h  RenderEngineImpl_OpenGL.h  RenderEngineImpl_Vulkan.h  RenderOptions.h  RenderPipeline.h  RenderPrimitivesList.h  RenderTarget.h  core.h  render_target_id.h
include/JumaRE/input/: InputButtons.h  InputData.h
include/JumaRE/material/: Material.h  MaterialParamsStorage.h  MaterialProperties.h  Shader.h  ShaderCreateInfo.h  ShaderUniform.h  ShaderUniformInfo.h
include/JumaRE/texture/: Texture.h  TextureBase.h  TextureFormat.h  TextureSamplerType.h  TextureSamples.h
include/JumaRE/vertex/: Vertex2D.h  Vertex2D_TexCoord.h  VertexBuffer.h  VertexBufferData.h  VertexDescription.h  VertexInfo.h
include/JumaRE/window/: WindowController.h  WindowMode.h  window_id.h  window_state_enums.h
src/DirectX/: DirectXFunctions.cpp  DirectXFunctions.h  TextureFormat_DirectX.h
src/DirectX11/: Material_DirectX11.cpp  Material_DirectX11.h  RenderEngineImpl_DirectX11.cpp  RenderEngine_DirectX11.cpp  RenderEngine_DirectX11.h  RenderTarget_DirectX11.cpp  RenderTarget_DirectX11.h  Shader_DirectX11.cpp  Shader_DirectX11.h  TextureFormat_DirectX11.h  Texture_DirectX11.cpp  Texture_DirectX11.h  VertexBuffer_DirectX11.cpp  VertexBuffer_DirectX11.h
src/DirectX11/window/: WindowControllerImpl_DirectX11.cpp  WindowControllerImpl_DirectX11.h  WindowController_DirectX11.cpp  WindowController_DirectX11.h  WindowController_DirectX11_GLFW.cpp  WindowController_DirectX11_GLFW.h
src/DirectX12/: Material_DirectX12.cpp  Material_DirectX12.h  RenderEngineImpl_DirectX12.cpp  RenderEngine_DirectX12.cpp  RenderEngine_DirectX12.h  RenderOptions_DirectX12.h  RenderPipeline_DirectX12.cpp  RenderPipeline_DirectX12.h  RenderTarget_DirectX12.cpp  RenderTarget_DirectX12.h  Shader_DirectX12.cpp  Shader_DirectX12.h  TextureFormat_DirectX12.h  Texture_DirectX12.cpp  Texture_DirectX12.h  VertexBuffer_DirectX12.cpp  VertexBuffer_DirectX12.h
src/DirectX12/DirectX12Objects/: .gitignore  DirectX12Buffer.cpp  DirectX12Buffer.h  DirectX12CommandList.cpp  DirectX12CommandList.h  DirectX12CommandQueue.cpp  DirectX12CommandQueue.h  DirectX12MipGenerator.cpp  DirectX12MipGenerator.h  DirectX12MipGeneratorTarget.cpp  DirectX12MipGeneratorTarget.h  DirectX12PipelineStateStreamObjects.h  DirectX12Swapchain.cpp  DirectX12Swapchain.h  DirectX12Texture.cpp  DirectX12Texture.h  MipGeneratorComputeShader.h
src/DirectX12/window/: WindowControllerImpl_DirectX12.cpp  WindowControllerImpl_DirectX12.h  WindowController_DirectX12.cpp  WindowController_DirectX12.h  WindowController_DirectX12_GLFW.cpp  WindowController_DirectX12_GLFW.h
src/GLFW/: WindowController_GLFW.cpp  WindowController_GLFW.h
src/OpenGL/: Material_OpenGL.cpp  Material_OpenGL.h  RenderEngineImpl_OpenGL.cpp  RenderEngine_OpenGL.cpp  RenderEngine_OpenGL.h  RenderTarget_OpenGL.cpp  RenderTarget_OpenGL.h  Shader_OpenGL.cpp  Shader_OpenGL.h  TextureFormat_OpenGL.h  Texture_OpenGL.cpp  Texture_OpenGL.h  VertexBuffer_OpenGL.cpp  VertexBuffer_OpenGL.h
src/OpenGL/window/: WindowControllerImpl_OpenGL.cpp  WindowControllerImpl_OpenGL.h  WindowController_OpenGL.cpp  WindowController_OpenGL.h  WindowController_OpenGL_GLFW.cpp  WindowController_OpenGL_GLFW.h
src/Vulkan/: Material_Vulkan.cpp  Material_Vulkan.h  RenderEngineImpl_Vulkan.cpp  RenderEngine_Vulkan.cpp  RenderEngine_Vulkan.h  RenderOptions_Vulkan.h  RenderPipeline_Vulkan.cpp  RenderPipeline_Vulkan.h  RenderTarget_Vulkan.cpp  RenderTarget_Vulkan.h  Shader_Vulkan.cpp  Shader_Vulkan.h  TextureFormat_Vulkan.h  Texture_Vulkan.cpp  Texture_Vulkan.h  VertexBuffer_Vulkan.cpp  VertexBuffer_Vulkan.h
src/Vulkan/vulkanObjects/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanFramebufferData.h  VulkanImage.cpp  VulkanImage.h  VulkanQueueType.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderPassDescription.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/Vulkan/window/: WindowControllerImpl_Vulkan.cpp  WindowControllerImpl_Vulkan.h  WindowController_Vulkan.cpp  WindowController_Vulkan.h  WindowController_Vulkan_GLFW.cpp  WindowController_Vulkan_GLFW.h
src/core/: InputData.cpp  Material.cpp  MaterialParamsStorage.cpp  RenderEngine.cpp  RenderEngineAsset.cpp  RenderPipeline.cpp  RenderTarget.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp  WindowController.cpp
src/utils/: RenderEngineObjectsPool.h
